--- a/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Prediagnostico.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Prediagnostico.mxml
@@ -341,6 +341,8 @@
 					"_tipoTransporte","_costoManoObra","_costoRefaccion","_costoTransporte","_costoHotel","_costoComidas","_costoFleteSobreEquipaje",
 					"_costoGastosDiversos","_observacionesCotDiag","_cantidadComplemento","_importePagoInicial","_fechaPrePagoInicial",
 					"_preImporte",
+					"_observacionesAccServicio","_observacionesServicio","_observacionesClienteOrden","_fechaFinServicio","_horaFinServicio",
+					"_interesCliente","_tiempoNumeroPruebas","_tiempoUnidadPruebas","_tiempoNumeroTotalServ","_tiempoUnidadTotalServ","_finServicio",
 					"_tieneServicio","_tienePrediagnostico","_tieneCotizacionPrediagnostico","_tieneVentaPrediagnostico","_tieneConfirmacion",
 					"_tieneDiagnostico","_tieneCotizacionDiagnostico","_tieneVentaDiagnostico",
 					"_fechaDepositoVta","_importeDepositoVta","_formaPagoVta","_observacionesComplVta","_observacionesFacVta"
@@ -448,7 +450,7 @@
 			
 			private function cancel():void{
 				resetBooleans();
-				getData();
+				getPrediagnosticData();
 				Valid.validateAll();
 			}
 			private function cancelPrediagnostic():void{
@@ -486,14 +488,14 @@
 				_listaFallas.setSelectedIndex(_listaFallas.selectedIndex);
 				_descripcionFallaReportada.text = _listaFallas.selectedItem._falla;
 				_codigoFalla.text = _listaFallas.selectedItem._codigo;
-				_MainService.getPreDiagnosticRecords(_listaFallas.selectedItem._idOrdenFalla);
+				_MainService.getPreDiagnosticRecords(_listaFallas.selectedItem._idOrdenFalla,1);
 				_MainService.getPreDiagnosticRecords.addEventListener(ResultEvent.RESULT,onGetPreDiagnosticRecordsResult);
 				_fallaSelected = true;
 			}
 			
 			private function getCurrentTime():void{
 				var currentDateTime:Date = new Date();
-				_fechaHablo.text = currentDateTime.fullYear + "-" + currentDateTime.month + "-" + currentDateTime.date;
+				_fechaHablo.text = currentDateTime.fullYear + "-" + (currentDateTime.month+1) + "-" + currentDateTime.date;
 				_horaHablo.text = currentDateTime.hours + ":" + currentDateTime.minutes + ":" + currentDateTime.seconds;
 				dataChange();
 			}
